--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -35,10 +35,13 @@
 	// }
 	.social {
 		&__link {
-			@include roww(18px, m);
+			@include roww(12px, m);
 			display: flex;
 			align-items: center;
 			margin-bottom: rem(10);
+			@include media-breakpoint-up(sm) {
+				--bs-gutter-x: #{rem(18)};
+			}
 			&:last-child {
 				margin-bottom: 0;
 			}
@@ -55,6 +58,9 @@
 				color: $body-color;
 				font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
 					"YTAS" 750, "YTDE" -177, "YTFI" 738;
+				@include media-breakpoint-down(sm) {
+					font-size: rem(13);
+				}
 			}
 		}
 		&__icon {
