--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -29,7 +29,10 @@ mixin top-nav()
 						.menu-mobile__inner
 							+menu-toggle()
 							+mnu()
+							+soc().d-xl-none
 							+e.btn.btn.btn-success.d-xl-none(href="#") Регистрация/Войти
+				.col-auto.d-none.d-xl-flex
+					+soc()
 				.col-auto.d-none.d-xl-inline-block
 					+e.btn.btn.btn-success(href="#") Регистрация/Войти
 				.col-auto.order-xl-first
