--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -11,7 +11,7 @@ mixin headerBlock()
 				h1 Молодёжный бит
 				p Всероссийский хакатон <br> для талантливых IT-специалистов
 				ul
-					li Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей
+					li Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей и&nbsp;захватывающее путешествие по&nbsp;России
 					li Приходи кодить на&nbsp;офлайн-площадку в&nbsp;Москве
 					li Участвуй онлайн из&nbsp;любой точки страны
 					li Регистрируйся до&nbsp;14&nbsp;февраля
