--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -23,7 +23,7 @@ block variables
 	- let  bg= 'main.jpg'
 
 block title
-	- let  title= index.head.title
+	- let  title= 'Молодёжный бит'
 	title= title
 block pagecontent
 	//- +mob-mnu()
