--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -27,6 +27,10 @@
 	font-size:math.div(11,10)*1rem;
 	width: math.div(18,11)*1em;
 }
+.icon-coin {
+	font-size:math.div(40,10)*1rem;
+	width: math.div(40,40)*1em;
+}
 .icon-curved-arrow-1 {
 	font-size:math.div(32,10)*1rem;
 	width: math.div(94,32)*1em;
@@ -46,6 +50,10 @@
 .icon-instagram {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-luggage {
+	font-size:math.div(40,10)*1rem;
+	width: math.div(40,40)*1em;
 }
 .icon-sCases-project {
 	font-size:math.div(24,10)*1rem;
