--- a/sourse/pug/blocks/sPrize/_sPrize.scss
+++ b/sourse/pug/blocks/sPrize/_sPrize.scss
@@ -24,192 +24,108 @@
 	}
 	&__row {
 		// --bs-gutter-x: #{rem()};
-		--bs-gutter-y: #{rem(8)};
-		align-items: flex-end;
-		@include media-breakpoint-up(md) {
-			--bs-gutter-y: #{rem(16)};
-		}
+		--bs-gutter-y: #{rem(24)};
+		// // align-items: flex-end;
+		// @include media-breakpoint-up(md) {
+		// 	--bs-gutter-y: #{rem(16)};
+		// }
 	}
-	.section-title {
-	}
+	// .section-title {
+	// }
 	// &__col{
 
 	// }
 	&__item {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		& > b {
+			font-weight: 471;
+			color: $primary;
+			line-height: calc(38 / 32);
+			font-size: rem(20);
+			@include media-breakpoint-up(md) {
+				@include rfs(24px, font-size);
+			}
+			@include media-breakpoint-up(xxl) {
+				font-size: rem(32);
+			}
+		}
 	}
 	&__amount {
 		position: relative;
 		display: flex;
 		flex-direction: column;
-		padding-right: rem(50);
+		@include rfs(52px, font-size);
+		line-height: calc(117 / 100);
 		margin-bottom: rem(40);
+		@include media-breakpoint-up(sm) {
+			@include rfs(65px, font-size);
+		}
+		@include media-breakpoint-up(md) {
+			@include rfs(80px, font-size);
+		}
 		@include media-breakpoint-up(lg) {
 			padding-right: 0;
 			margin-bottom: rem(60);
 		}
-		&::after {
-			content: "";
-			position: absolute;
-			@include a-cent(y);
-			width: rem(28);
-			height: rem(28);
-			right: rem(14);
-			border-radius: 50%;
-			background-color: $success;
-			@include media-breakpoint-up(lg) {
-				content: none;
-			}
+		@include media-breakpoint-up(xl) {
+			@include rfs(100px, font-size);
 		}
+
 		b {
 			font-weight: 471;
-			margin-bottom: rem(13);
-			@include rfs(75px, font-size);
 			color: $primary;
-			// font-size: rem(100);
-			line-height: calc(117 / 100);
-			@include media-breakpoint-up(xl) {
-				font-size: rem(100);
-			}
-			@include media-breakpoint-down(sm) {
-			}
-			@media (max-width: 450px) {
-				font-size: rem(36);
-				line-height: calc(42 / 36);
-			}
+			font-size: inherit;
+			margin-bottom: rem(4);
 		}
 		span {
-			font-size: rem(20);
-			line-height: calc(23 / 20);
-			@include media-breakpoint-up(xl) {
-				font-size: rem(24);
-				line-height: calc(28 / 24);
+			font-size: rem(15);
+			line-height: calc(32 / 27);
+			@include media-breakpoint-up(md) {
+				font-size: 0.27em;
 			}
 		}
 	}
 	&__sum {
-		font-weight: 471;
-		font-size: rem(24);
-		line-height: calc(28 / 24);
-		color: $primary;
-		@include media-breakpoint-up(lg) {
-			font-size: rem(32);
-			line-height: calc(38 / 32);
-			margin-bottom: rem(16);
-		}
-		@include media-breakpoint-up(xxl) {
-			margin-bottom: rem(20);
-		}
-	}
-	&__position {
 		display: flex;
-		justify-content: space-between;
-		flex-wrap: wrap;
-		align-items: center;
-		border: 3px solid $success;
-		border-radius: rem(450);
-		width: 100%;
+		flex-direction: column;
+		@include rfs(50px, font-size);
+		b {
+			display: block;
+			font-weight: 471;
+			color: $primary;
+			margin-bottom: rem(8);
+			line-height: calc(59 / 50);
+			font-size: inherit;
+		}
 		span {
 			display: block;
 			font-weight: 471;
-			font-size: rem(20);
-			line-height: calc(23 / 20);
-			@include media-breakpoint-up(xl) {
-				font-size: rem(24);
-				line-height: calc(28 / 24);
-			}
-		}
-		.icon {
-			color: $primary;
-			fill: none;
-			stroke: currentColor;
-			stroke-width: 4px;
-			display: none;
-			@include media-breakpoint-up(lg) {
-				display: block;
-			}
+			line-height: calc(21 / 18);
+			font-size: 0.36em;
 		}
 	}
-	&__position--first {
-		position: relative;
-		--bWidth: #{rem(10)};
-		border-width: var(--bWidth);
-		padding: rem(10) rem(20);
-		@include media-breakpoint-up(lg) {
-			--bWidth: #{rem(12)};
-			padding: rem(21) rem(30) rem(21) rem(35);
+	&__position {
+		@include roww(24px, m);
+		display: flex;
+		align-items: flex-end;
+		margin-bottom: rem(15);
+		@include media-breakpoint-up(sm) {
+			margin-bottom: rem(20);
 		}
-		@include media-breakpoint-up(xl) {
-			--bWidth: #{rem(14)};
-			padding: rem(25) rem(22) rem(25) rem(39);
-		}
-		&::before,
-		&::after {
-			@include media-breakpoint-up(lg) {
-				content: "";
-				position: absolute;
-				border-radius: rem(450);
-				border: 1px solid $success;
-				opacity: 0.3;
-				z-index: -1;
+		span {
+			display: block;
+			font-weight: 471;
+			font-size: rem(25);
+			line-height: calc(29 / 25);
+			@include media-breakpoint-up(sm) {
+				font-size: rem(30);
+				line-height: calc(35 / 30);
 			}
 		}
-		&::before {
-			width: calc(100% + #{rem(22)} + var(--bWidth) * 2);
-			height: calc(100% + #{rem(16)} + var(--bWidth) * 2);
-			left: calc(#{rem(-11)} - var(--bWidth));
-			top: calc(#{rem(-8)} - var(--bWidth));
-		}
-		&::after {
-			width: calc(100% + #{rem(46)} + var(--bWidth) * 2);
-			height: calc(100% + #{rem(40)} + var(--bWidth) * 2);
-			left: calc(#{rem(-23)} - var(--bWidth));
-			top: calc(#{rem(-20)} - var(--bWidth));
-		}
-
-		.icon {
-			font-size: rem(78);
-			@include media-breakpoint-up(xl) {
-				font-size: rem(90);
-			}
-		}
-	}
-	&__position--second {
-		border-width: rem(4);
-		padding: rem(16) rem(26);
-		@include media-breakpoint-up(lg) {
-			border-width: rem(8);
-			padding: rem(10) rem(16) rem(10) rem(28);
-		}
-		@include media-breakpoint-up(xl) {
-			border-width: rem(10);
-			padding: rem(12) rem(18) rem(12) rem(34);
-		}
-
-		.icon {
-			font-size: rem(52);
-			@include media-breakpoint-up(xl) {
-				font-size: rem(62);
-			}
-		}
-	}
-	&__position--third {
-		border-width: 1px;
-		padding: rem(19) rem(29);
-		@include media-breakpoint-up(lg) {
-			border-width: rem(3);
-			padding: rem(6) rem(8) rem(6) rem(23);
-		}
-		@include media-breakpoint-up(xl) {
-			padding: rem(8) rem(10) rem(9) rem(28);
-		}
-		.icon {
-			font-size: rem(32);
-			@include media-breakpoint-up(xl) {
-				font-size: rem(39);
-			}
+		svg {
+			max-width: rem(40);
+			height: auto;
 		}
 	}
 
@@ -228,3 +144,233 @@
 	@include media-breakpoint-down(xl) {
 	}
 } // end.sPrize
+
+// .sPrize {
+// 	// --sPT: #{rem()};
+// 	// --sPB: #{rem()};
+// 	--sTPB: #{rem(40)};
+
+// 	@include media-breakpoint-up(md) {
+// 		--sTPB: #{rem(60)};
+// 	}
+// 	@include media-breakpoint-up(xl) {
+// 		--sTPB: #{rem(80)};
+// 	}
+// 	position: relative;
+// 	& > img {
+// 		position: absolute;
+// 		display: none;
+// 		max-width: 50%;
+// 		right: 0;
+// 		bottom: 30%;
+// 		z-index: -1;
+// 		@include media-breakpoint-up(md) {
+// 			display: block;
+// 		}
+// 	}
+// 	&__row {
+// 		// --bs-gutter-x: #{rem()};
+// 		--bs-gutter-y: #{rem(8)};
+// 		align-items: flex-end;
+// 		@include media-breakpoint-up(md) {
+// 			--bs-gutter-y: #{rem(16)};
+// 		}
+// 	}
+// 	.section-title {
+// 	}
+// 	// &__col{
+
+// 	// }
+// 	&__item {
+// 		display: flex;
+// 		flex-direction: column;
+// 		align-items: center;
+// 	}
+// 	&__amount {
+// 		position: relative;
+// 		display: flex;
+// 		flex-direction: column;
+// 		padding-right: rem(50);
+// 		margin-bottom: rem(40);
+// 		@include media-breakpoint-up(lg) {
+// 			padding-right: 0;
+// 			margin-bottom: rem(60);
+// 		}
+// 		&::after {
+// 			content: "";
+// 			position: absolute;
+// 			@include a-cent(y);
+// 			width: rem(28);
+// 			height: rem(28);
+// 			right: rem(14);
+// 			border-radius: 50%;
+// 			background-color: $success;
+// 			@include media-breakpoint-up(lg) {
+// 				content: none;
+// 			}
+// 		}
+// 		b {
+// 			font-weight: 471;
+// 			margin-bottom: rem(13);
+// 			@include rfs(75px, font-size);
+// 			color: $primary;
+// 			// font-size: rem(100);
+// 			line-height: calc(117 / 100);
+// 			@include media-breakpoint-up(xl) {
+// 				font-size: rem(100);
+// 			}
+// 			@include media-breakpoint-down(sm) {
+// 			}
+// 			@media (max-width: 450px) {
+// 				font-size: rem(36);
+// 				line-height: calc(42 / 36);
+// 			}
+// 		}
+// 		span {
+// 			font-size: rem(20);
+// 			line-height: calc(23 / 20);
+// 			@include media-breakpoint-up(xl) {
+// 				font-size: rem(24);
+// 				line-height: calc(28 / 24);
+// 			}
+// 		}
+// 	}
+// 	&__sum {
+// 		font-weight: 471;
+// 		font-size: rem(24);
+// 		line-height: calc(28 / 24);
+// 		color: $primary;
+// 		@include media-breakpoint-up(lg) {
+// 			font-size: rem(32);
+// 			line-height: calc(38 / 32);
+// 			margin-bottom: rem(16);
+// 		}
+// 		@include media-breakpoint-up(xxl) {
+// 			margin-bottom: rem(20);
+// 		}
+// 	}
+// 	&__position {
+// 		display: flex;
+// 		justify-content: space-between;
+// 		flex-wrap: wrap;
+// 		align-items: center;
+// 		border: 3px solid $success;
+// 		border-radius: rem(450);
+// 		width: 100%;
+// 		span {
+// 			display: block;
+// 			font-weight: 471;
+// 			font-size: rem(20);
+// 			line-height: calc(23 / 20);
+// 			@include media-breakpoint-up(xl) {
+// 				font-size: rem(24);
+// 				line-height: calc(28 / 24);
+// 			}
+// 		}
+// 		.icon {
+// 			color: $primary;
+// 			fill: none;
+// 			stroke: currentColor;
+// 			stroke-width: 4px;
+// 			display: none;
+// 			@include media-breakpoint-up(lg) {
+// 				display: block;
+// 			}
+// 		}
+// 	}
+// 	&__position--first {
+// 		position: relative;
+// 		--bWidth: #{rem(10)};
+// 		border-width: var(--bWidth);
+// 		padding: rem(10) rem(20);
+// 		@include media-breakpoint-up(lg) {
+// 			--bWidth: #{rem(12)};
+// 			padding: rem(21) rem(30) rem(21) rem(35);
+// 		}
+// 		@include media-breakpoint-up(xl) {
+// 			--bWidth: #{rem(14)};
+// 			padding: rem(25) rem(22) rem(25) rem(39);
+// 		}
+// 		&::before,
+// 		&::after {
+// 			@include media-breakpoint-up(lg) {
+// 				content: "";
+// 				position: absolute;
+// 				border-radius: rem(450);
+// 				border: 1px solid $success;
+// 				opacity: 0.3;
+// 				z-index: -1;
+// 			}
+// 		}
+// 		&::before {
+// 			width: calc(100% + #{rem(22)} + var(--bWidth) * 2);
+// 			height: calc(100% + #{rem(16)} + var(--bWidth) * 2);
+// 			left: calc(#{rem(-11)} - var(--bWidth));
+// 			top: calc(#{rem(-8)} - var(--bWidth));
+// 		}
+// 		&::after {
+// 			width: calc(100% + #{rem(46)} + var(--bWidth) * 2);
+// 			height: calc(100% + #{rem(40)} + var(--bWidth) * 2);
+// 			left: calc(#{rem(-23)} - var(--bWidth));
+// 			top: calc(#{rem(-20)} - var(--bWidth));
+// 		}
+
+// 		.icon {
+// 			font-size: rem(78);
+// 			@include media-breakpoint-up(xl) {
+// 				font-size: rem(90);
+// 			}
+// 		}
+// 	}
+// 	&__position--second {
+// 		border-width: rem(4);
+// 		padding: rem(16) rem(26);
+// 		@include media-breakpoint-up(lg) {
+// 			border-width: rem(8);
+// 			padding: rem(10) rem(16) rem(10) rem(28);
+// 		}
+// 		@include media-breakpoint-up(xl) {
+// 			border-width: rem(10);
+// 			padding: rem(12) rem(18) rem(12) rem(34);
+// 		}
+
+// 		.icon {
+// 			font-size: rem(52);
+// 			@include media-breakpoint-up(xl) {
+// 				font-size: rem(62);
+// 			}
+// 		}
+// 	}
+// 	&__position--third {
+// 		border-width: 1px;
+// 		padding: rem(19) rem(29);
+// 		@include media-breakpoint-up(lg) {
+// 			border-width: rem(3);
+// 			padding: rem(6) rem(8) rem(6) rem(23);
+// 		}
+// 		@include media-breakpoint-up(xl) {
+// 			padding: rem(8) rem(10) rem(9) rem(28);
+// 		}
+// 		.icon {
+// 			font-size: rem(32);
+// 			@include media-breakpoint-up(xl) {
+// 				font-size: rem(39);
+// 			}
+// 		}
+// 	}
+
+// 	@include media-breakpoint-up(xl) {
+// 	}
+// 	@include media-breakpoint-up(lg) {
+// 	}
+// 	@include media-breakpoint-up(md) {
+// 	}
+// 	@include media-breakpoint-up(sm) {
+// 	}
+// 	@include media-breakpoint-between(md, xl) {
+// 	}
+// 	@include media-breakpoint-only(xl) {
+// 	}
+// 	@include media-breakpoint-down(xl) {
+// 	}
+// } // end.sPrize
