--- a/sourse/pug/blocks/sCases/_sCases.scss
+++ b/sourse/pug/blocks/sCases/_sCases.scss
@@ -18,11 +18,10 @@
 	&__item {
 	}
 	.tabs {
-		max-width: rem(1181);
 		&__caption {
 			@include roww(16px, m);
 			display: none;
-			@include media-breakpoint-up(lg) {
+			@include media-breakpoint-up(xl) {
 				display: flex;
 			}
 		}
@@ -47,15 +46,37 @@
 			@include media-breakpoint-up(sm) {
 				padding: rem(32);
 			}
-			@include media-breakpoint-up(lg) {
+			@include media-breakpoint-up(xl) {
+				background-color: transparent;
+				padding: 0;
 				margin-bottom: 0;
 			}
+			&.active {
+				@include media-breakpoint-up(xl) {
+					display: flex;
+				}
+			}
 			h4 {
+				position: relative;
 				color: $white;
 				margin-bottom: rem(24);
 				@include media-breakpoint-down(sm) {
 					font-size: rem(20);
 					margin-bottom: rem(16);
+				}
+				&::after {
+					content: "";
+					@include a-cent(y);
+					position: absolute;
+					right: 0;
+					width: rem(16);
+					height: rem(10);
+					background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 1L9 9L17 1' stroke='white' stroke-width='2'/%3e%3c/svg%3e ");
+					background-repeat: no-repeat;
+					background-size: contain;
+					@include media-breakpoint-up(xl) {
+						display: none;
+					}
 				}
 			}
 			.small {
@@ -72,6 +93,7 @@
 			p {
 				font-weight: 200;
 				font-size: rem(15);
+				flex-grow: 1;
 				font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
 					"YTAS" 750, "YTDE" -177, "YTFI" 738;
 				margin-bottom: 1em;
@@ -92,8 +114,17 @@
 		}
 		&__content-wrap {
 			margin-bottom: rem(24);
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
 			@include media-breakpoint-up(md) {
 				margin-bottom: rem(27);
+			}
+			@include media-breakpoint-up(xl) {
+				border-radius: $border-radius-lg;
+				background-color: $primary;
+				padding: rem(32);
+				margin-bottom: 0;
 			}
 		}
 		&__content-btn {
@@ -101,18 +132,43 @@
 			@include media-breakpoint-down(md) {
 				width: 100%;
 			}
+			&:hover, &:active {
+				border-color: $white;
+			}
+		}
+		&__tags {
+			@include roww(6px, m);
+			margin-bottom: rem(24);
+			.btn {
+				pointer-events: none;
+				border-radius: rem(20);
+				padding: rem(6) rem(11);
+				background-color: $success;
+			}
+		}
+		&__links {
+			display: flex;
+			flex-direction: column;
+			margin-top: rem(24);
 		}
 		&__content-link {
 			@include roww(16px, m);
 			display: inline-flex;
 			align-items: center;
-			justify-content: center;
-			color: $white;
+			color: $primary;
+			margin-bottom: rem(16);
+			@include media-breakpoint-up(sm) {
+				margin-bottom: rem(19);
+			}
+			&:last-child {
+				margin-bottom: 0;
+			}
 			&:hover {
 				color: $link-hover-color;
 			}
 			.icon {
 				font-size: rem(16);
+				flex-shrink: 0;
 				@include media-breakpoint-up(sm) {
 					font-size: rem(24);
 				}
@@ -132,11 +188,11 @@
 			--bs-btn-border-color: transparent;
 			padding: rem(16);
 			padding-right: rem(72);
-			margin-bottom: rem(27);
+			// margin-bottom: rem(27);
 			margin-bottom: rem(16);
 			text-align: left;
 			&::after {
-				content: '';
+				content: "";
 				@include a-cent(y);
 				position: absolute;
 				right: rem(32);
@@ -146,11 +202,100 @@
 				background-repeat: no-repeat;
 				background-size: contain;
 			}
-			@include media-breakpoint-up(lg) {
+			@include media-breakpoint-up(xl) {
 				display: none;
 			}
 			&.active {
 				display: none;
+			}
+		}
+		&__case-manager {
+			border-radius: $border-radius-lg;
+			background-color: $light;
+			padding: rem(16);
+			// @include media-breakpoint-up(md) {
+			// 	padding: rem(24);
+			// }
+			@include media-breakpoint-up(xl) {
+				width: 35%;
+				flex-shrink: 0;
+				padding: rem(32);
+			}
+			h5 {
+				position: relative;
+				margin-bottom: 0;
+				@include media-breakpoint-down(xl) {
+					font-size: rem(15);
+				}
+				&::after {
+					@include mt(0.15s);
+					content: "";
+					@include a-cent(y);
+					position: absolute;
+					right: 0;
+					width: rem(16);
+					height: rem(10);
+					background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 0.890625L9 8.89063L17 0.890625' stroke='%23897AD6' stroke-width='2'/%3e%3c/svg%3e ");
+					background-repeat: no-repeat;
+					background-size: contain;
+					@include media-breakpoint-up(xl) {
+						display: none;
+					}
+				}
+			}
+		}
+		&__case-manager-btn {
+			&:not(.active) {
+				h5 {
+					&::after {
+						transform: rotate(-90deg);
+					}
+				}
+			}
+		}
+		&__case-manager-body {
+			margin-top: rem(24);
+			@include media-breakpoint-down(xl) {
+				display: none;
+			}
+			&.active {
+				display: block;
+			}
+		}
+	}
+
+	.case-slider {
+		max-width: rem(200);
+		margin-left: 0;
+		&__slide {
+		}
+		&__img-wrap {
+			@include block(176, 118);
+			background-color: $white;
+			border-radius: rem(16);
+			margin-bottom: rem(24);
+		}
+		&__title {
+			color: $body-color;
+			font-weight: 200;
+			font-size: rem(13);
+			line-height: 150%;
+			font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
+				"YTAS" 750, "YTDE" -177, "YTFI" 738;
+			@include media-breakpoint-up(sm) {
+				font-size: rem(15);
+				line-height: calc(18 / 15);
+			}
+		}
+		.swiper-pagination {
+			position: static;
+			display: flex;
+			align-items: center;
+			margin-top: rem(24);
+			.swiper-pagination-bullet {
+				margin-right: rem(7) !important;
+				width: rem(9) !important;
+				height: rem(9) !important;
 			}
 		}
 	}
@@ -170,3 +315,175 @@
 	@include media-breakpoint-down(xl) {
 	}
 } // end.sCases
+
+// .sCases {
+// 	// --sPT: #{rem()};
+// 	// --sPB: #{rem()};
+// 	// --sTPB: #{rem()};
+// 	--sTPB: #{rem(40)};
+// 	@include media-breakpoint-up(md) {
+// 		--sTPB: #{rem(60)};
+// 	}
+// 	&__row {
+// 		// --bs-gutter-x: #{rem()};
+// 		// --bs-gutter-y: #{rem()};
+// 	}
+// 	.section-title {
+// 	}
+// 	&__col {
+// 	}
+// 	&__item {
+// 	}
+// 	.tabs {
+// 		max-width: rem(1181);
+// 		&__caption {
+// 			@include roww(16px, m);
+// 			display: none;
+// 			@include media-breakpoint-up(lg) {
+// 				display: flex;
+// 			}
+// 		}
+// 		&__btn {
+// 			@extend .btn, .btn-outline-primary;
+// 			--bs-btn-hover-color: #{$white};
+// 			--bs-btn-active-color: #{$white};
+// 			--bs-btn-bg: #{$light};
+// 			--bs-btn-padding-x: #{rem(24)};
+// 			--bs-btn-padding-y: #{rem(14)};
+// 			margin-bottom: rem(27);
+// 			@include media-breakpoint-up(xxl) {
+// 				--bs-btn-font-size: #{rem(18)};
+// 			}
+// 		}
+// 		&__content {
+// 			color: $white;
+// 			background-color: $primary;
+// 			border-radius: $border-radius-lg;
+// 			padding: rem(16);
+// 			margin-bottom: rem(16);
+// 			@include media-breakpoint-up(sm) {
+// 				padding: rem(32);
+// 			}
+// 			@include media-breakpoint-up(lg) {
+// 				margin-bottom: 0;
+// 			}
+// 			h4 {
+// 				color: $white;
+// 				margin-bottom: rem(24);
+// 				@include media-breakpoint-down(sm) {
+// 					font-size: rem(20);
+// 					margin-bottom: rem(16);
+// 				}
+// 			}
+// 			.small {
+// 				display: block;
+// 				// font-size: rem(15);
+// 				font-weight: 700;
+// 				margin-bottom: rem(24);
+// 				font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
+// 					"YTAS" 750, "YTDE" -177, "YTFI" 738;
+// 				@include media-breakpoint-down(sm) {
+// 					font-size: rem(13);
+// 				}
+// 			}
+// 			p {
+// 				font-weight: 200;
+// 				font-size: rem(15);
+// 				font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
+// 					"YTAS" 750, "YTDE" -177, "YTFI" 738;
+// 				margin-bottom: 1em;
+// 				&:last-child {
+// 					margin-bottom: 0;
+// 				}
+// 			}
+// 		}
+// 		&__row {
+// 			align-items: center;
+// 			--bs-gutter-y: calc(var(--bs-gutter-x) / 2);
+// 			@include media-breakpoint-up(md) {
+// 				--bs-gutter-y: var(--bs-gutter-x);
+// 			}
+// 			@include media-breakpoint-up(xl) {
+// 				--bs-gutter-x: #{rem(42)};
+// 			}
+// 		}
+// 		&__content-wrap {
+// 			margin-bottom: rem(24);
+// 			@include media-breakpoint-up(md) {
+// 				margin-bottom: rem(27);
+// 			}
+// 		}
+// 		&__content-btn {
+// 			@extend .btn, .btn-success;
+// 			@include media-breakpoint-down(md) {
+// 				width: 100%;
+// 			}
+// 		}
+// 		&__content-link {
+// 			@include roww(16px, m);
+// 			display: inline-flex;
+// 			align-items: center;
+// 			justify-content: center;
+// 			color: $white;
+// 			&:hover {
+// 				color: $link-hover-color;
+// 			}
+// 			.icon {
+// 				font-size: rem(16);
+// 				@include media-breakpoint-up(sm) {
+// 					font-size: rem(24);
+// 				}
+// 			}
+// 			span {
+// 				display: block;
+// 				font-weight: 471;
+// 				font-size: rem(15);
+// 				line-height: calc(18 / 15);
+// 			}
+// 		}
+// 		&__btn-accordion {
+// 			position: relative;
+// 			--bs-btn-hover-color: #{$white};
+// 			--bs-btn-active-color: #{$white};
+// 			--bs-btn-bg: #{$light};
+// 			--bs-btn-border-color: transparent;
+// 			padding: rem(16);
+// 			padding-right: rem(72);
+// 			margin-bottom: rem(27);
+// 			margin-bottom: rem(16);
+// 			text-align: left;
+// 			&::after {
+// 				content: '';
+// 				@include a-cent(y);
+// 				position: absolute;
+// 				right: rem(32);
+// 				width: rem(16);
+// 				height: rem(10);
+// 				background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 0.890625L9 8.89063L17 0.890625' stroke='%23897AD6' stroke-width='2'/%3e%3c/svg%3e ");
+// 				background-repeat: no-repeat;
+// 				background-size: contain;
+// 			}
+// 			@include media-breakpoint-up(lg) {
+// 				display: none;
+// 			}
+// 			&.active {
+// 				display: none;
+// 			}
+// 		}
+// 	}
+
+// 	@include media-breakpoint-up(xl) {
+// 	}
+// 	@include media-breakpoint-up(lg) {
+// 	}
+// 	@include media-breakpoint-up(md) {
+// 	}
+// 	@include media-breakpoint-up(sm) {
+// 	}
+// 	@include media-breakpoint-between(md, xl) {
+// 	}
+// 	@include media-breakpoint-only(xl) {
+// 	}
+// 	@include media-breakpoint-down(xl) {
+// 	}
+// } // end.sCases
