edit some meta tags

--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -23,7 +23,7 @@ block variables
 	- let  bg= 'main.jpg'
 
 block title
-	- let  title= 'Молодёжный бит'
+	- let  title= '17-19 февраля 2023 г.:  Хакатон «‎Молодёжный бит»‎ для талантливых ИТ-специалистов'
 	title= title
 block pagecontent
 	//- +mob-mnu()
