--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -24,7 +24,7 @@ mixin sCases(data)
 								.btn Web
 								.btn CV
 							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
-							a(href="#").tabs__content-btn Хочу решить кейс!
+							a(href="#").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
 								h5 Постановщик кейса
@@ -69,7 +69,7 @@ mixin sCases(data)
 								.btn Web
 								.btn CV
 							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
-							a(href="#").tabs__content-btn Хочу решить кейс!
+							a(href="#").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
 								h5 Постановщик кейса
@@ -103,7 +103,7 @@ mixin sCases(data)
 								.btn Web
 								.btn CV
 							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
-							a(href="#").tabs__content-btn Хочу решить кейс!
+							a(href="#").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
 								h5 Постановщик кейса
@@ -148,7 +148,7 @@ mixin sCases(data)
 								.btn Web
 								.btn CV
 							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
-							a(href="#").tabs__content-btn Хочу решить кейс!
+							a(href="#").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
 							.tabs__case-manager-btn
 								h5 Постановщик кейса
