--- a/sourse/pug/blocks/sCases/_sCases.scss
+++ b/sourse/pug/blocks/sCases/_sCases.scss
@@ -60,6 +60,8 @@
 				position: relative;
 				color: $white;
 				margin-bottom: rem(24);
+				width: 100%;
+				padding-right: rem(24);
 				@include media-breakpoint-down(sm) {
 					font-size: rem(20);
 					margin-bottom: rem(16);
@@ -224,6 +226,7 @@
 			h5 {
 				position: relative;
 				margin-bottom: 0;
+				padding-right: rem(24);
 				@include media-breakpoint-down(xl) {
 					font-size: rem(15);
 				}
