edit sections paddings

--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -12,7 +12,7 @@ mixin sContact()
 								h4 Для участников
 								+e.item
 									small Адрес электронной почты
-									a(href="email:example@mail.com") example@mail.com
+									a(href="email:support@youthbit.ru") support@youthbit.ru
 							.col-sm-auto
 								+b.social
 									+e.link(href= "#" target="_blank")
