--- a/sourse/pug/blocks/sLogos/_sLogos.pug
+++ b/sourse/pug/blocks/sLogos/_sLogos.pug
@@ -27,7 +27,7 @@ mixin sLogos(data)
 					+control()
 			+e.title-sub  Партнеры
 			+e.slider-wrap
-				+e.slider--js.swiper-slider
+				+e.slider--js.swiper-slider.mb-0
 					.swiper-wrapper
 						- for (var x = 0; x < 10; x++)
 							+e.slide.swiper-slide
