--- a/sourse/pug/blocks/sPersons/_sPersons.pug
+++ b/sourse/pug/blocks/sPersons/_sPersons.pug
@@ -28,7 +28,7 @@ mixin sPersons(data)
 				+control()
 
 			+e.title Жюри
-			+e.slider--js.swiper
+			+e.slider--js.swiper.mb-0
 				.swiper-wrapper
 					- for (var x = 0; x < 2; x++)
 						+slide('Виктор Сожможнов','Следует отметить, что высококачественный прототип будущего проекта способствует')
