--- a/sourse/pug/blocks/sAbout/_sAbout.scss
+++ b/sourse/pug/blocks/sAbout/_sAbout.scss
@@ -2,48 +2,46 @@
 .sAbout {
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
-	@include media-breakpoint-down(lg){
+	@include media-breakpoint-down(lg) {
 		--sPT: #{rem(30)};
-		
+	}
+	@include media-breakpoint-up(xl) {
+		--sPB: #{rem(120)};
 	}
 	// --sTPB: #{rem()};
-	&__row{
+	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
-		@include media-breakpoint-up(xl){
+		@include media-breakpoint-up(xl) {
 			align-items: center;
 		}
-
 	}
-	.section-title{
-		
+	.section-title {
 	}
-	&__col{
-
+	&__col {
 	}
-	&__item{
-
+	&__item {
 		font-size: rem(24);
 	}
-	&__number{
+	&__number {
 		font-size: rem(144);
 		font-weight: 471;
-		line-height: .8;
+		line-height: 0.8;
 	}
-	&__number-text{
-		&--sm{
+	&__number-text {
+		&--sm {
 			font-size: rem(20);
 		}
 	}
-	&__text-wrap{
+	Logos__slider &__text-wrap {
 		max-width: rem(505);
 	}
-	.col-md-auto{
+	.col-md-auto {
 		@include media-breakpoint-down(md) {
-				text-align: center;
+			text-align: center;
 		}
 	}
-	&__item--left{
+	&__item--left {
 		position: relative;
 		z-index: 2;
 		padding-right: 40px;
@@ -60,8 +58,8 @@
 			margin-bottom: 0;
 		}
 		margin-bottom: 1em;
-		&::before{
-			content: '';
+		&::before {
+			content: "";
 			z-index: -1;
 			position: absolute;
 			right: 0;
@@ -71,34 +69,33 @@
 			height: rem(102);
 			border-radius: 50%;
 		}
-		.sAbout__number-text{
+		.sAbout__number-text {
 			margin-left: 2em;
 		}
 	}
 
-	&__item--right{
+	&__item--right {
 		text-align: right;
 		position: relative;
 		z-index: 2;
 		padding-right: rem(23);
 		padding-top: 23px;
 		padding-bottom: 23px;
-		@include media-breakpoint-up(xl){
+		@include media-breakpoint-up(xl) {
 			margin-top: 0;
 		}
-		@include media-breakpoint-up(sm){
-
+		@include media-breakpoint-up(sm) {
 			margin-top: 40px;
-		} 
+		}
 		// margin-top: 20px;
-		@include media-breakpoint-up(xl){
+		@include media-breakpoint-up(xl) {
 		}
 
-		&::before{
-			content: '';
+		&::before {
+			content: "";
 			left: 2.2em;
 			top: 0;
-			background: #B3E427;
+			background: #b3e427;
 			opacity: 0.3;
 			border-radius: 450px;
 			position: absolute;
@@ -106,26 +103,33 @@
 			width: 100%;
 			height: 100%;
 		}
-		&::after{
+		&::after {
 			content: url(../img/@2x/about-img.png);
 			left: 70%;
 			position: absolute;
 			bottom: -5%;
 		}
-		.sAbout__number-text{
+		.sAbout__number-text {
 			margin-right: 1em;
 		}
 	}
-	p{
+	p {
 		font-size: rem(23);
 		font-weight: 471;
 	}
 
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sAbout
