--- a/sourse/pug/layout/main.pug
+++ b/sourse/pug/layout/main.pug
@@ -37,8 +37,9 @@ html(lang="ru")
 		<meta property="og:description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!" />
 
 		meta(name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no")
-		<meta name="format-detection" content="telephone=no"> 
+		<meta name="format-detection" content="telephone=no">
 
+		//- favicon
 		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -48,6 +49,11 @@ html(lang="ru")
 		<meta name="msapplication-TileColor" content="#b3e427">
 		<meta name="msapplication-config" content="favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
+		//- favicon end
+
+		<meta name="yandex-verification" content="b9aefdd717c962c6" />
+		<meta name="google-site-verification" content="B94CmZLxXKLi2EpCf0VeiHS8XgfdaO7rnmmegyIJkO0" />
+
 		// Yandex.Metrika counter
 		script(type='text/javascript').
 			(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
